Closed Bug 562441 Opened 14 years ago Closed 14 years ago

comparison between signed and unsigned integer expressions in nsIDocument::GetExtraPropertyTable

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

In member function ‘nsPropertyTable* nsIDocument::GetExtraPropertyTable(PRUint16)’:

nsDocument.cpp:1809: warning: comparison between signed and unsigned integer expressions
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #442161 - Flags: review?(Olli.Pettay)
Comment on attachment 442161 [details] [diff] [review]
patch

If this helps...
Attachment #442161 - Flags: review?(Olli.Pettay) → review+
http://hg.mozilla.org/mozilla-central/rev/08509e3b9ffb
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: