Bug 562441 - comparison between signed and unsigned integer expressions in nsIDocument::GetExtraPropertyTable, r=smaug